# thinking-in-rust

./: 404.html  Cargo.toml  README.md  build.rs  hello.html
app/: Cargo.toml  README.md
app/app0/: Cargo.toml
app/src/: file.rs  main.rs
app01/: Cargo.toml
app01/benches/: my_benchmark.rs
app01/src/: file.rs  main.rs
app01/src/file/: index.rs
app02/: Cargo.toml  question.json
app03/: Cargo.toml
app04/: Cargo.toml  README.md
app04/handle-errors/: Cargo.toml
app05/: Cargo.toml  README.md
app05/src/: main.rs
app06/: .env  Cargo.toml
app06/src/: main.rs  schema.rs  store.rs
app08/: Cargo.toml
app08/src/: lib.rs  schema.rs
app09/: .env  Cargo.toml  README.md
app09/migrations/: 20230505010525_init.up.sql
app09/src/: handler.rs  main.rs  model.rs
app1/: Cargo.toml
app1/src/: file.rs  main.rs
app10/: .env  Cargo.toml  README.md
app10/src/: a.rs  errors.rs  main.rs  security.rs
app11/: .env  Cargo.toml  Dockerfile  README.md
app11/integration-tests/: Cargo.toml
app11/src/: config.rs
app12/: Cargo.toml  README.md
app12/docker/: Dockerfile.aarch64
app2/: Cargo.toml
app2/src/: main.rs
app3/: Cargo.toml
app3/src/: main.rs
app4/: Cargo.toml  README.md
app4/src/: main.rs
app5/: Cargo.toml  README.md  log4rs.yaml
app5/src/: main.rs
app6/: Cargo.toml  README-diesel-schema.md  questions.json
app6/src/: main.rs  modules.rs
crates/core/: README.md  home.rs  main.rs  thinking.rs
docs/: Ambari.md  BI_opensource.md  CPP.md  Centos7_CPU_aarch64_Install_Nginx.md  Centos_install_standalone_redis.md  ClickHouse_install.md  Deloy_Tidb_Using_Docker.md  Docker_compose.md  ELK_setup.md  Face Recognition with OpenCV.md  Hadoop_cluster.md  LInux_optimized_settings.md  Linux_create_user.md  MINIO_LOGIN_TOKEN.md  MySQL8-master-slave-setup.md  MySQL8.0.x_compile_N_install.md  MySQL8.0_install.md  Nginx_installed_on_centos7.md  Oracle_dump&opts.md  RHL7.4 _offline_install_ntpd_server_N_client.md  SELinux_setting.md  TIDB_N_MySQL.md  TIDB_admin.md  Tengine_install.md  TensorFlow_resources.md  TiDB Production Deployment from Binary Tarball.md  TiDB_Production_Deployment_from_Binary_Tarball(TOONAN).md  VNC2Centos7.md  a.test.md  aarch64_mips64le_install_go.md  activie-win10-e.md  auto_deployment_script.md  automate_login_with_ssh_key_settings.md  blockchain_notes.md  centOS_docker_install_mysql.md  centOS_install_tensorflow.md  centos7.5_install_mysql_cluster.md  centos7_install_python3.5.md  centos7_install_redis_with_images.md  centos7_installed_postgresql12.md  (+55 more)
docs/docker/: Docker7.9.2009.1  Docker7.9.2009.2  README.md  install_postgre15_in_docker.md
docs/doris/: Docker_setup_fe_be.md
docs/go/: Go_FQA.md  errgroup.md  go_mod.md
docs/oracle/: data_gard_backup.md  hot_backup_file.md  ogg.md  oracle_kills_show_threads.md
docs/py/: install-pyenv.md
docs/rust/: 01.Rust-cargo.md  (+8 more)
docs/rust-examples/: 01-转换所有字母为大写字母.md
tests/: misc.rs
(+17 files in other folders)
