[package]
name = "app01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
warp = "0.3.5"
uuid = { version = "~0.2.0", features = ["v4"]}
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false