[package]
name = "app10"
version = "0.1.0"
edition = "2021"

[dependencies]

sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls" , "postgres" ] }
# Tokio:
tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
paseto = "2.0.2+1.0.3"
chrono = "0.4.26"
serde_json = "1.0.96"

warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
uuid = { version = "0.8.2", features = ["serde", "v4"]}
jsonwebtoken = "8.0.1"
scrypt = "0.9.0"
log = "0.4"
log4rs = "1.0.0"
thiserror = "1.0"